--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -62,6 +62,6 @@
 		</ul>
 	</nav>
 </footer>
-<script src="./js/app.js" defer></script>
+<script src="./js/script.js" defer></script>
 </body>
 </html>
