--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -61,6 +61,6 @@
 		</ul>
 	</nav>
 </footer>
-<script src="./js/script.js" defer></script>
+<script type="module" src="./js/script.js" defer></script>
 </body>
 </html>
