--- a/FrontEnd/login.html
+++ b/FrontEnd/login.html
@@ -15,26 +15,25 @@
             <h1>Sophie Bluel <span>Architecte d'intérieur</span></h1>
             <nav>
                 <ul>
-                    <li>projets</li>
-                    <li>contact</li>
-                    <li>login</li>
+                    <li><a href="./index.html#portfolio">projets</a></li>
+                    <li><a href="./index.html#contact">contact</a></li>
+                    <li><a href="./login.html">login</a></li>
                     <li><img src="./assets/icons/instagram.png" alt="Instagram"></li>
                 </ul>
             </nav>
         </header>
         <main>
-            <div class="wrapper">
             <section id="login">
                 <h2>Log In</h2>
                 <form action="#" method="post">
                     <label for="email">E-mail</label>
-                    <input type="email" name="email" id="email">
+                    <input type="email" name="email" id="email" required>
                     <label for="password">Mot de passe</label>
-                    <input type="password" name="password" id="password">
-                    <input type="submit" value="Se connecter">
-                <a href="#" class="forgot-password">Mot de passe oublié</a>
+                    <input type="password" name="password" id="password" required>
+                    <input type="submit" value="Se connecter" id="submitBtn">
+                </form>
+                <a href="#">Mot de passe oublié</a>
             </section>
-            </div>
         </main>
 
         <footer>
@@ -44,8 +43,6 @@
                 </ul>
             </nav>
         </footer>
-
     <script type="module" src="./js/script.js" defer></script>
-
     </body>
 </html>
