--- a/FrontEnd/login.html
+++ b/FrontEnd/login.html
@@ -9,6 +9,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Syne:wght@700;800&family=Work+Sans&display=swap" rel="stylesheet">
         <meta name="description" content="">
         <link rel="stylesheet" href="./assets/style.css">
+        <script src="./js/login.js" defer></script>
     </head>
     <body>
         <header>
@@ -17,7 +18,7 @@
                 <ul>
                     <li><a href="./index.html#portfolio">projets</a></li>
                     <li><a href="./index.html#contact">contact</a></li>
-                    <li><a href="./login.html">login</a></li>
+                    <li class="active"><a href="./login.html">login</a></li>
                     <li><img src="./assets/icons/instagram.png" alt="Instagram"></li>
                 </ul>
             </nav>
@@ -25,7 +26,7 @@
         <main>
             <section id="login">
                 <h2>Log In</h2>
-                <form action="#" method="post">
+                <form id="loginForm" action="#" method="post">
                     <label for="email">E-mail</label>
                     <input type="email" name="email" id="email" required>
                     <label for="password">Mot de passe</label>
@@ -43,6 +44,5 @@
                 </ul>
             </nav>
         </footer>
-    <script type="module" src="./js/script.js" defer></script>
     </body>
 </html>
