created admin mode

--- a/FrontEnd/login.html
+++ b/FrontEnd/login.html
@@ -12,37 +12,38 @@
         <script type="module" src="./js/login.js" defer></script>
     </head>
     <body>
-        <header>
-            <h1>Sophie Bluel <span>Architecte d'intérieur</span></h1>
-            <nav>
-                <ul>
-                    <li><a href="./index.html#portfolio">projets</a></li>
-                    <li><a href="./index.html#contact">contact</a></li>
-                    <li class="active"><a href="./login.html">login</a></li>
-                    <li><img src="./assets/icons/instagram.png" alt="Instagram"></li>
-                </ul>
-            </nav>
-        </header>
-        <main>
-            <section id="login">
-                <h2>Log In</h2>
-                <form id="loginForm" action="#" method="post">
-                    <label for="email">E-mail</label>
-                    <input type="email" name="email" id="email" required>
-                    <label for="password">Mot de passe</label>
-                    <input type="password" name="password" id="password" required>
-                    <input type="submit" value="Se connecter" id="submitBtn">
-                </form>
-                <a href="#">Mot de passe oublié</a>
-            </section>
-        </main>
-
-        <footer>
-            <nav>
-                <ul>
-                    <li>Mentions Légales</li>
-                </ul>
-            </nav>
-        </footer>
+        <div class="wrapper">
+            <header>
+                <h1>Sophie Bluel <span>Architecte d'intérieur</span></h1>
+                <nav>
+                    <ul>
+                        <li><a href="./index.html#portfolio">projets</a></li>
+                        <li><a href="./index.html#contact">contact</a></li>
+                        <li class="active"><a href="./login.html">login</a></li>
+                        <li><img src="./assets/icons/instagram.png" alt="Instagram"></li>
+                    </ul>
+                </nav>
+            </header>
+            <main>
+                <section id="login">
+                    <h2>Log In</h2>
+                    <form id="loginForm" action="#" method="post">
+                        <label for="email">E-mail</label>
+                        <input type="email" name="email" id="email" required>
+                        <label for="password">Mot de passe</label>
+                        <input type="password" name="password" id="password" required>
+                        <input type="submit" value="Se connecter" id="submitBtn">
+                    </form>
+                    <a href="#">Mot de passe oublié</a>
+                </section>
+            </main>
+            <footer>
+                <nav>
+                    <ul>
+                        <li>Mentions Légales</li>
+                    </ul>
+                </nav>
+            </footer>
+        </div>
     </body>
 </html>
