--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -13,8 +13,15 @@
 		<meta name="description" content="">
 		<link rel="stylesheet" href="./assets/style.css">
 		<script type="module" src="./js/script.js" defer></script>
+		<script src="./js/modal.js"></script>
 	</head>
 	<body>
+		<div id="modal1" class="modal" aria-hidden="true" role="dialog" aria-modal="false">
+			<div class="modal-wrapper">
+				<h1>Titre</h1>
+				<p>Contenu modal</p>
+			</div>
+		</div>
 		<div class="wrapper">
 			<header>
 				<h1>Sophie Bluel <span>Architecte d'intérieur</span></h1>
