--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -17,9 +17,12 @@
 	</head>
 	<body>
 		<div id="modal1" class="modal" aria-hidden="true" role="dialog" aria-modal="false">
-			<div class="modal-wrapper">
-				<h1>Titre</h1>
-				<p>Contenu modal</p>
+			<div class="modal-wrapper modal-stop">
+				<div class="modal-close" aria-label="Fermer le modal">
+					<i class="fa-solid fa-xmark"></i>
+				</div>
+				<h3 class="modal-title">Galerie photo</h3>
+				<div class="modal-content"></div>
 			</div>
 		</div>
 		<div class="wrapper">
