updated modal styling

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -16,15 +16,15 @@
 		<script src="./js/modal.js"></script>
 	</head>
 	<body>
-		<div id="modal1" class="modal" aria-hidden="true" role="dialog" aria-modal="false">
+		<aside id="modal1" class="modal">
 			<div class="modal-wrapper modal-stop">
-				<div class="modal-close" aria-label="Fermer le modal">
+				<div class="modal-close">
 					<i class="fa-solid fa-xmark"></i>
 				</div>
-				<h3 class="modal-title">Galerie photo</h3>
-				<div class="modal-content"></div>
+				<div class="modal-content">				
+				</div>
 			</div>
-		</div>
+		</aside>
 		<div class="wrapper">
 			<header>
 				<h1>Sophie Bluel <span>Architecte d'intérieur</span></h1>
