--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -13,7 +13,7 @@
 		<meta name="description" content="">
 		<link rel="stylesheet" href="./assets/style.css">
 		<script type="module" src="./js/script.js" defer></script>
-		<script src="./js/modal.js"></script>
+		<script type="module" src="./js/modal.js"></script>
 	</head>
 	<body>
 		<aside id="modal1" class="modal">
