--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -16,12 +16,15 @@
 		<script type="module" src="./js/modal.js"></script>
 	</head>
 	<body>
-		<aside id="modal1" class="modal">
+		<aside class="modal">
 			<div class="modal-wrapper modal-stop">
+				<div class="back-btn">
+					<i class="fa-solid fa-arrow-left"></i>
+				</div>
 				<div class="modal-close">
 					<i class="fa-solid fa-xmark"></i>
 				</div>
-				<div class="modal-content">				
+				<div class="modal-content">
 				</div>
 			</div>
 		</aside>
